# dandelion-python

./: .gitignore  Dockerfile  flake.nix  pyproject.toml
.github/workflows/: release.yml
deploy/chart/: values.yaml
deploy/chart/sysdig/: kustomization.yaml
deploy/chart/sysdig/patches/: 1739252580_remediate_SecurityContext_readOnlyRootFilesystem_for_workload_legacy-webapp.yaml
deploy/chart/templates/: clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
src/dandelion_python/: __init__.py  logger.py
src/red_lumin/: attack.py  dandelion.py  instructions.md
src/red_lumin/scripts/: post_shell.sh  supply_chain_attack.sh
src/red_lumin/utils/: github.py  scripts.py  secrets.py
